feat: project init

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Use specific Java version for sdkmanager to work
       uses: actions/setup-java@v3
       with:
-        distribution: 'temurin' # See 'Supported distributions' for available options
-        java-version: '8'
+        distribution: 'adopt' # See 'Supported distributions' for available options
+        java-version: '11'
 
     - name: Download Android Emulator Image
       run: |
@@ -31,11 +31,16 @@ jobs:
     - name: Install node_modules
       run: |
         yarn install --frozen-lockfile
+
+    - name: Change java sdk version
+      uses: actions/setup-java@v3
+      with:
+        java-version: '8'
+        distribution: 'temurin'
     
     - name: Build for detox
       run: |
         yarn build:android-release
-      with: java-version: '8'
 
     - name: Android Emulator
       timeout-minutes: 10
