--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -51,4 +51,5 @@ jobs:
         echo "Emulator started"
 
     - name: Android Detox
+      timeout-minutes: 10
       run: yarn test:android-release
