--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,7 @@ on: [push]
 jobs:
   build:
     runs-on: macos-latest
+    timeout-minutes: 30
 
     steps:
     - name: Checkout
@@ -19,36 +20,34 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '8'
-        distribution: 'temurin'
+        distribution: 'zulu'
+        architecture: 'x64'
 
     - name: Download Android Emulator Image
       run: |
         echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-29;google_apis;x86"
-        echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name emu --device "Nexus 5X" -k 'system-images;android-29;google_apis;x86'
+        echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n TestEmulator -d pixel --package 'system-images;android-29;google_apis;x86'
         $ANDROID_HOME/emulator/emulator -list-avds
 
     - name: Install node_modules
       run: |
-        yarn install --frozen-lockfile
-
-    - name: Change java sdk version
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'adopt' # See 'Supported distributions' for available options
-        java-version: '11'
+        npm install
     
-    - name: Build for detox
+    - name: Start RN Packager
       run: |
-        yarn build:android-release
+        npx react-native start &> android_packager.log &
 
-    - name: Android Emulator
-      continue-on-error: true
+    - name: Build detox
       run: |
-        echo "Starting emulator"
-        nohup $ANDROID_HOME/emulator/emulator -avd emu -no-audio -no-snapshot -no-window &
-        $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-        $ANDROID_HOME/platform-tools/adb devices
-        echo "Emulator started"
+        npx detox build -c android
 
-    - name: Android Detox
-      run: yarn test:android-release
+    - name: Android Run Detox
+      run: |
+        npx detox test --record-videos all --take-screenshots all -c android
+
+    - name: Upload Test Artifact - GitHub Action
+      if: always()
+      uses: actions/upload-artifact@v2
+      with: 
+        name: artifacts
+        path: artifacts
