--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,14 +41,14 @@ jobs:
       run: |
         yarn build:android-release
 
-    - name: Android Emulator
-      continue-on-error: true
-      run: |
-        echo "Starting emulator"
-        nohup $ANDROID_HOME/emulator/emulator -avd emu -no-audio -no-snapshot -no-window &
-        $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-        $ANDROID_HOME/platform-tools/adb devices
-        echo "Emulator started"
+    # - name: Android Emulator
+    #   continue-on-error: true
+    #   run: |
+    #     echo "Starting emulator"
+    #     nohup $ANDROID_HOME/emulator/emulator -avd emu -no-audio -no-snapshot -no-window &
+    #     $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
+    #     $ANDROID_HOME/platform-tools/adb devices
+    #     echo "Emulator started"
 
     - name: Android Detox
       run: yarn test:android-release
