--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,8 +52,10 @@ jobs:
 
     - name: Android Detox
       run: |
-        set ANDROID_SDK_ROOT=Users/runner/Library/Android/sdk
-        set ANDROID_HOME=Users/runner/Library/Android/sdk
-        export ANDROID_HOME=Users/runner/Library/Android/sdk
-        export ANDROID_SDK_ROOT=Users/runner/Library/Android/sdk
+        set ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
+        set ANDROID_HOME=/Users/runner/Library/Android/sdk
+        echo $ANDROID_SDK_ROOT
+        echo $ANDROID_HOME
+        export ANDROID_HOME=/Users/runner/Library/Android/sdk
+        export ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
         sudo yarn test:android-release
