--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,10 +52,12 @@ jobs:
 
     - name: Android Detox
       run: |
-        set ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
         set ANDROID_HOME=/Users/runner/Library/Android/sdk
-        echo $ANDROID_SDK_ROOT
-        echo $ANDROID_HOME
+        set ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
         export ANDROID_HOME=/Users/runner/Library/Android/sdk
         export ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
+        setenv ANDROID_HOME /Users/runner/Library/Android/sdk
+        setenv ANDROID_SDK_ROOT /Users/runner/Library/Android/sdk
+        echo $ANDROID_SDK_ROOT
+        echo $ANDROID_HOME
         sudo yarn test:android-release
