--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -56,6 +56,6 @@ jobs:
         set ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
         export ANDROID_HOME=/Users/runner/Library/Android/sdk
         export ANDROID_SDK_ROOT=/Users/runner/Library/Android/sdk
-        echo $ANDROID_SDK_ROOT
+        echo "打印:"$ANDROID_SDK_ROOT
         echo $ANDROID_HOME
         sudo yarn test:android-release
