--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -48,5 +48,7 @@ jobs:
 
     - run: brew tap wix/brew
     - run: brew install applesimutils
+    - run: xcode-select --install
+    - run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
     - run: yarn detox build e2e --configuration ios.sim.release
     - run: yarn detox test e2e --configuration ios.sim.release --cleanup --debug-synchronization 200
