--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -90,14 +90,14 @@ jobs:
           max_attempts: 3
           command: DETOX_DISABLE_POSTINSTALL=1 yarn --no-audit --prefer-offline
 
-      - name: Cache My Emulator
+      - name: Cache pushy Emulator
         uses: actions/cache@v3
         with:
-          path: ~/.cache/my/emulators
-          key: my-emulators-v1-${{ github.run_id }}
-          restore-keys: my-emulators-v1
+          path: ~/.cache/pushy/emulators
+          key: pushy-emulators-v1-${{ github.run_id }}
+          restore-keys: pushy-emulators-v1
 
-      - name: Start My Emulator
+      - name: Start pushy Emulator
         run: yarn tests:emulator:start-ci
 
       - uses: actions/cache@v3
