--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -121,9 +121,9 @@ jobs:
       - name: Cache Firestore Emulator
         uses: actions/cache@v3
         with:
-          path: ~/.cache/my/emulators
-          key: my-emulators-v1-${{ github.run_id }}
-          restore-keys: my-emulators-v1
+          path: ~/.cache/pushy/emulators
+          key: pushy-emulators-v1-${{ github.run_id }}
+          restore-keys: pushy-emulators-v1
 
       - name: Start Firestore Emulator
         run: yarn tests:emulator:start-ci
