--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fs-extra": "^9.1.0",
     "jest": "^29.2.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "firebase-tools": "^11.22.0"
   }
 }
